solc_mutator_ossfuzz_seed_corpus/test_sol/test_fc01e2a737fb21c98f50249d7ea99077d21aeb5945de29f8b8c62c3379a039ef_000ffca4ab90e8cfd403377b201508811fd0513e_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(function () external i0,address i1,bool i2)  returns(uint8 o0,uint120 o1)
{

  {


o1 |= ((773565428673594198440527272791493665 | 424724975741295712098688091453141011) / 1177319331842114522672387787777167709);
{




}
  }

}
pragma abicoder v1;
pragma solidity >= 0.0.0;
// ----
// TypeError 7366: (su0.sol:99-224): Operator |= not compatible with types uint120 and rational_const 1111...(29 digits omitted)...2531 / 1177...(29 digits omitted)...7709
